<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="@color/bg_dashboard"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_145sdp"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/welcome_back_to_furniture_world" />

        <TextView
            android:id="@+id/btn_post_furniture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"

            android:background="@drawable/bg_post_btn"
            android:gravity="center"
            android:paddingStart="@dimen/_35sdp"
            android:paddingEnd="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/post_furniture_details"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/btn_browse_items"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_post_btn"
            android:gravity="center"
            android:paddingStart="@dimen/_35sdp"
            android:paddingEnd="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/browse_posted_items"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/bg_post_btn"
            android:gravity="center"
            android:paddingStart="@dimen/_35sdp"
            android:paddingEnd="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />




    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_110sdp"
        android:background="@drawable/bg_bubble"/>




</RelativeLayout>