<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/welcome_back" />

        <com.app.furnitureworld.custom.CEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/bg_phone"
            android:hint="@string/enter_email_address"
            android:imeOptions="actionNext"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp" />

        <com.app.furnitureworld.custom.CEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_phone"
            android:hint="@string/enter_password"
            android:imeOptions="actionNext"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:maxLength="50"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp" />



    </LinearLayout>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@+id/ll_already_have_account"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:paddingStart="@dimen/_35sdp"
        android:paddingEnd="@dimen/_35sdp"
        android:text="SignIN"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <LinearLayout
        android:id="@+id/ll_already_have_account"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:text="Don't Have an Account?"/>
        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:textColor="#a790ef"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="SignUP"/>

    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/bg_bubble"/>


</RelativeLayout>